# coding-brain

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LAUNCH_POSTS.md  README.md  flake.nix  index.html  justfile  mkdocs.yml  sitemap.xml
.beads/: config.yaml  interactions.jsonl  metadata.json
.codexctl/loops/: issue-triage.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  issue-release-notify.yml  release.yml
.internal/plans/: 2026-07-14-brain-only-contraction.md  2026-07-15-brain-test-state-isolation.md  2026-07-15-just-run-recipe.md  2026-07-15-nested-kitty-approval-capture.md  2026-07-15-resumed-transcript-reattachment.md  2026-07-15-stable-codex-session-telemetry.md  2026-07-16-home-manager-module.md  2026-07-16-hook-bound-brain-approval.md  2026-07-20-automatic-mode-cli.md  2026-07-20-coding-brain-crate-namespace.md  2026-07-20-live-list-indentation.md  2026-07-22-delivered-denial-live-projection.md  2026-07-22-provider-aware-claude-antigravity.md  2026-07-23-activity-store-concurrency-test-deflake.md  2026-07-23-antigravity-approval-lifecycle-correlation.md  2026-07-23-antigravity-unsupported-outcome.md  2026-07-23-declarative-claude-antigravity-home-manager-hooks.md  2026-07-23-responsive-live-evidence-pane.md  2026-07-24-codex-subagent-identity.md  2026-07-24-compact-lifecycle-continuity.md  2026-07-24-diagnostics-label-cleanup.md  2026-07-24-live-activity-scanability.md  2026-07-24-recent-live-decision-corrections.md  2026-07-24-record-outcome-removal.md  2026-07-24-scorecard-refresh-lock-contention.md
.internal/research/: 2026-07-22-claude-code-antigravity-session-capabilities.md  2026-07-22-codex-post-tool-use-outcome-path.md  2026-07-23-declarative-claude-antigravity-home-manager-hooks.md  2026-07-24-codex-subagent-hook-identity.md  2026-07-24-legacy-record-outcome-migration.md
.internal/specs/: 2026-07-15-brain-test-state-isolation-design.md  2026-07-15-just-run-recipe-design.md  2026-07-15-nested-kitty-approval-capture-design.md  2026-07-15-stable-codex-session-telemetry-design.md  2026-07-16-home-manager-module-design.md  2026-07-16-hook-bound-brain-approval-design.md  2026-07-16-lifecycle-hook-cleanup-design.md  2026-07-17-codex-lifecycle-hook-status-design.md  2026-07-20-automatic-mode-cli-design.md  2026-07-20-coding-brain-crate-namespace-design.md  2026-07-20-lifecycle-activity-project-label-design.md  2026-07-20-live-list-indentation-design.md  2026-07-22-delivered-denial-live-projection-design.md  2026-07-22-provider-aware-claude-antigravity-design.md  2026-07-23-activity-store-concurrency-test-deflake-design.md  2026-07-23-antigravity-approval-lifecycle-correlation-design.md  2026-07-23-declarative-claude-antigravity-home-manager-hooks-design.md  2026-07-23-false-orphan-outcome-diagnostics-design.md  2026-07-24-codex-subagent-identity-design.md  2026-07-24-compact-lifecycle-continuity-design.md  2026-07-24-diagnostics-label-cleanup-design.md  2026-07-24-live-activity-scanability-design.md  2026-07-24-recent-live-corrections-design.md  2026-07-24-record-outcome-removal-design.md  2026-07-24-scorecard-refresh-lock-contention-design.md
blog/: local-brain-architecture.md  posts.md
claude-plugin/.claude-plugin/: plugin.json
configuration/: index.html
contributing/: index.html
crates/codexctl-core/: Cargo.toml
crates/codexctl-core/src/: brain_activity.rs  codex_transcript.rs  config.rs  discovery.rs  health.rs  hooks.rs  lib.rs  models.rs  monitor.rs  paths.rs  project.rs  rules.rs  runtime.rs  session.rs  transcript.rs
crates/codexctl-core/src/lifecycle/: input.rs  mod.rs  projection.rs  reconcile.rs  store.rs
crates/codexctl-core/src/terminals/: ghostty.rs  gnome_terminal.rs  kitty.rs  mod.rs  tmux.rs  warp.rs
crates/codexctl-tui/: Cargo.toml
crates/codexctl-tui/src/: app.rs  brain_app.rs  demo.rs  lib.rs
crates/codexctl-tui/src/ui/: detail.rs  mod.rs  status_bar.rs  table.rs
crates/codexctl-tui/src/ui/brain/: live.rs  mod.rs  review.rs  scorecard.rs
crates/coding-brain-core/: Cargo.toml
crates/coding-brain-core/src/: brain_activity.rs  config.rs  discovery.rs  health.rs  helpers.rs  history.rs  hooks.rs  lib.rs  monitor.rs  process.rs  provider.rs  rules.rs  runtime.rs  session.rs  session_links.rs
crates/coding-brain-core/src/discovery/: antigravity.rs  claude.rs
crates/coding-brain-core/src/lifecycle/: input.rs  projection.rs  reconcile.rs  store.rs
crates/coding-brain-core/src/terminals/: apple.rs  ghostty.rs  gnome_terminal.rs  iterm2.rs  kitty.rs  mod.rs  tmux.rs  warp.rs  wezterm.rs
crates/coding-brain-core/tests/: lifecycle_store.rs  session_links.rs
crates/coding-brain-tui/: Cargo.toml
crates/coding-brain-tui/src/: brain_app.rs  terminal_suspend.rs
crates/coding-brain-tui/src/ui/brain/: diagnostics.rs  live.rs  mod.rs  review.rs  scorecard.rs
decisions/ADR-0001-lifecycle-hooks-as-status-evidence/: index.html
decisions/ADR-0002-coding-brain-product-boundary/: index.html
decisions/ADR-0003-fail-safe-hook-and-learning-persistence/: index.html
decisions/ADR-0004-provider-aware-guards-and-terminal-actuation/: index.html
decisions/INDEX/: index.html
docs/: configuration.md  contributing.md  index.md  llms.txt  quickstart.md  reference.md  terminal-support.md  troubleshooting.md
docs/decisions/: ADR-0002-coding-brain-product-boundary.md  ADR-0004-provider-aware-guards-and-terminal-actuation.md  INDEX.md
nix/: home-manager.nix
nix/tests/: home-manager-module.nix
quickstart/: index.html
reference/: index.html
scripts/: record-demos.sh  render-aur-bin-files.sh  render-homebrew-formula.sh
search/: search_index.json
src/: commands.rs  config.rs  doctor.rs  lib.rs  lifecycle_hook.rs  main.rs
src/brain/: autopsy.rs  (+23 more)
stylesheets/: extra.css
terminal-support/: index.html
tests/: activity_scale.rs  agent_deck_navigation.rs  brain_tui_smoke.rs  config_mode_cli.rs  distill_process.rs  headless_activity.rs  hook_activity.rs  integration_tests.rs  lifecycle_hook_cli.rs  public_namespace.rs  removed_surfaces.rs  unit_tests.rs
troubleshooting/: index.html
(+82 files in other folders)
