[workspace]
members = ["crates/codexctl-core", "crates/codexctl-tui"]
# The root package is also a workspace member (the binary crate). Future epics
# (e.g. codexctl-brain — see #279) may add more.

[package]
name = "codexctl"
version = "0.58.0"
edition = "2024"
# MSRV — bumped to 1.88 in #328 so cargo-install on older toolchains
# emits a clean "rustc too old" error instead of opaque transitive-dep
# errors from `darling` and `instability`.
rust-version = "1.88"
description = "Supervise Codex sessions with a local brain that learns from you."
license = "MIT"
repository = "https://github.com/aleadag/codexctl"
homepage = "https://github.com/aleadag/codexctl"
keywords = ["codex", "session-monitoring", "local-llm", "tui", "automation"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.gif", "*.cast", "codex-demo.*", ".github/"]

[[bin]]
name = "codexctl"
path = "src/main.rs"

[lib]
name = "codexctl"
path = "src/lib.rs"

[dependencies]
# Workspace crates carry a `version` alongside `path` so the binary can be
# published to crates.io. Local builds always use the path; crates.io strips
# the path and resolves the published version. Bump both when the workspace
# crates change.
codexctl-core = { path = "crates/codexctl-core", version = "0.53.0" }
codexctl-tui = { path = "crates/codexctl-tui", version = "0.53.0" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
libc = "0.2"
ctrlc = "3"
fs2 = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
