[workspace]
members = ["crates/coding-brain-core", "crates/coding-brain-tui"]
# The root package is also a workspace member (the binary crate). Future epics
# may add more crates (see #279).

[package]
name = "coding-brain"
version = "0.58.0"
edition = "2024"
# MSRV — bumped to 1.88 in #328 so cargo-install on older toolchains
# emits a clean "rustc too old" error instead of opaque transitive-dep
# errors from `darling` and `instability`.
rust-version = "1.88"
description = "Supervise Codex sessions with a local brain that learns from you."
license = "MIT"
repository = "https://github.com/aleadag/coding-brain"
homepage = "https://github.com/aleadag/coding-brain"
keywords = ["codex", "session-monitoring", "local-llm", "tui", "automation"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["*.gif", "*.cast", "codex-demo.*", ".github/"]

[[bin]]
name = "coding-brain"
path = "src/main.rs"

[lib]
name = "coding_brain"
path = "src/lib.rs"

[dependencies]
# Workspace crates carry a `version` alongside `path` so the binary can be
# published to crates.io. Local builds always use the path; crates.io strips
# the path and resolves the published version. Bump both when the workspace
# crates change.
coding-brain-core = { path = "crates/coding-brain-core", version = "0.53.0" }
coding-brain-tui = { path = "crates/coding-brain-tui", version = "0.53.0" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
libc = "0.2"
ctrlc = "3"
fs2 = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
