[package]
name = "codexctl-core"
version = "0.53.0"
edition = "2024"
rust-version = "1.88"
description = "Session types, transcript discovery, health checks, and runtime traits for codexctl."
license = "MIT"
repository = "https://github.com/aleadag/codexctl"
keywords = ["codex", "session-monitoring", "internals"]
categories = ["command-line-utilities"]

[lib]
name = "codexctl_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
crossterm = "0.28"
# theme.rs uses ratatui::style::Color. Pulling the whole ratatui crate is a
# touch heavier than we'd like — when codexctl-tui is extracted (#275) theme
# may move with it and we can drop this dep.
ratatui = "0.29"

[dev-dependencies]
tempfile = "3"
