[package]
name = "coding-brain-core"
version = "0.53.0"
edition = "2024"
rust-version = "1.88"
description = "Session types, transcript discovery, health checks, and runtime traits for Coding Brain."
license = "MIT"
repository = "https://github.com/aleadag/codexctl"
keywords = ["codex", "session-monitoring", "internals"]
categories = ["command-line-utilities"]

[lib]
name = "coding_brain_core"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
crossterm = "0.28"
time = { version = "0.3", features = ["parsing"] }
# theme.rs exposes Theme with ratatui::style::Color fields through Core's public
# API, so Core retains ratatui for its consumers.
ratatui = "0.29"
fs2 = "0.4"
tempfile = "3"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
